ex1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
      - name: file-volume
        emptyDir: {}
      containers:
        - name: logger
          image: aahaavis/logger:latest
          volumeMounts:
          - name: file-volume
            mountPath: usr/src/app/files
        - name: output
          image: aahaavis/output:latest
          volumeMounts:
          - name: file-volume
            mountPath: usr/src/app/files
